# vibevoice

./: .gitignore  README.md  vp
.github/patches/: apply_v0_2_6.py  run_v0_2_6.py
.github/workflows/: apply-v0.2.6.yml  commit-v0.2.6.yml  diagnose-v0.2.6.yml  inspect-release-run.yml  inspect-v0.2.6-release.yml  lock-v0.2.6.yml  monitor-v0.2.6-retry.yml  observe-v0.2.6-release.yml  release.yml  snapshot-v0.2.6-final.yml  snapshot-v0.2.6-release.yml  update-v0.2.6-release-notes.yml  verify-v0.2.6-final.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  PillWindow.tsx  types.ts  ui.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/views/: ControlView.tsx  DiagnosticsView.tsx  (+2 more)
config/: default-dictionary.json
docs/: .markdownlint-cli2.jsonc  ARCHITECTURE.md  INSTALL.md  README.md  VIBEVOICE_MVP.md
docs/plans/: 2026-07-17-vibevoice-0.3-context-packs.md
docs/product/: v0.3-context-packs.md
docs/qa/: v0.3-compatibility-matrix.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6-final-snapshot.txt  v0.2.6-linux-failure.txt  v0.2.6-retry-snapshot.txt  v0.2.6-workflow-status.txt  v0.2.6.md  v1.2.0.md
docs/research/: 2026-07-17-context-packs-validation.md
scripts/: check-system.sh  check-windows.ps1  install-app.ps1  install-app.sh  install-engine.sh  install-fedora.sh  install-windows.ps1  uninstall-app.ps1  uninstall-app.sh  update-app.ps1  update-app.sh
(+9 files in other folders)
