[package]
name = "vibevoice"
version = "0.1.0"
description = "Local-first desktop voice input for developers"
authors = ["VibeVoice"]
edition = "2021"

[lib]
name = "vibevoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
hound = "3"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
